More Java 17 conventions to simplify code.